<resources>
    <string name="app_name">SideKick</string>
    <string name="invalid_name">Please Enter Password to Continue</string>
    <string name="invalidPassword">Please Enter Password to Continue</string>
    <string name="invalid_email">Please Enter Email Address to Continue</string>
    <string name="invalid_username">Please enter Username</string>
    <string name="invalidConfirmPassword">Password does not match. Enter again.</string>

    <string name="paragraph">

        <ol>
            <li>an original valid primary identity document<b>(passport)</b></li>\n
        <li>an original valid secondary document (only applicable if you have reached the age of majority in your province or territory of residence)\n
</li>
        <li>an original valid supporting document (only applicable if the name on any document provided is different from the name on the SIN application)</li>
    </ol>

        </string>
    <string name="para2"><ol>
            <li>a digital copy of an original valid primary identity document (you must provide both sides of the document if there is identity information on each side)</li>\n
        <li>a digital copy of an original valid secondary document </li>\n
        <li>a digital copy of a proof of address</li>\n
        <li>a digital copy of an original valid supporting document (only applicable if the name on any document provided is different from the name on the online SIN application)</li>
    </ol></string>
    <string name="para3">
        <ol>
            <li>an original valid primary identity document</li>\n
            <li>a completed and signed SIN application form. If you are unable to print the application form, you can order one by phone at:\n
1-866-274-6627 (toll free number) or,/n
if outside Canada, at 1-506-548-7961 (long distance charges will apply)</li>\n
            <li>an original valid supporting document (only applicable if the name on your primary identity document is different from the name on the SIN application)</li>
        </ol>
    </string>
    <string name="para4"><b>400 City Hall Square East, Suite 103\n
        Windsor, Ontario</b></string>
    <string name="para5">
        Head to a Superstore (Canadian supermarket chain) or affiliate.You’ll likely need to activate the SIM card yourself, which takes about 5-10 min over the phone. Activating online only works with phones they sell to you.\n\n

        <b>Required documents:</b>\n
        <ul>
            <li>Passport</li>\n
            <li>Study permit</li>
        </ul>\n\n

         you will require an unlocked phone or have to buy a phone from the provider. If your phone is currently locked, you may also be able to get it unlocked in a general mobile store if you don’t mind losing your warranty.

    </string>
    <string name="para6">
        Canada has three main providers (Bell, Telus,  Rogers), and a host of smaller resellers, including a few owned by the “big three” themselves.\n\n

        There are also a couple of outliers such as Freedom Mobile that have worse coverage and use less common GSM frequencies. While the company’s 4G/LTE rollout makes it compatible with a wider range of international phones than in the past, most travelers will still be better off looking elsewhere.\n\n
        PC Mobile is the best bet if you would like a little bit of talk and text with your data. The SIM card costs $10 CAD, which includes a $10 credit on your account.\n\n
        Basic call and text packages start at $10 CAD/month. If you’d like a useful amount of data as well (and most people do,) package prices start at $25/month for 2GB, rising to $50/month for 8GB. You can add additional data for $10/GB, but weirdly, only on the top-tier package.


    </string>
    <string name="para0">How to Buy a SIM Card in Canada</string>
    <string name="title_activity_sim_sin5">SimSin5</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
